--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-/your-app
-│
-├── main.py
-├── requirements.txt
-├── .env             # optional for SECRET_KEY
-│
-├── /templates
-│   ├── index.html
-│   ├── dashboard.html
-│   └── request_trial.html
-│
-└── /static
-    └── (optional css, js, logos etc)
+flask
+gunicorn
+stripe
