--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-Flask
-stripe
-python-dotenv
-gunicorn
+services:
+  - type: web
+    name: nocodepay
+    runtime: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn main:app
+    plan: free
+    envVars:
+      - key: FLASK_SECRET_KEY
+        sync: false
+      - key: STRIPE_SECRET_KEY
+        sync: false
+      - key: YOUR_DOMAIN
+        sync: false
+    autoDeploy: true
+    healthCheckPath: /
