--- a/.render.yaml
+++ b/.render.yaml
@@ -1,16 +1,11 @@
 services:
   - type: web
     name: nocodepay
-    runtime: python
-    buildCommand: pip install -r requirements.txt
+    env: python
+    buildCommand: ""
     startCommand: gunicorn main:app
-    plan: free
     envVars:
-      - key: FLASK_SECRET_KEY
-        sync: false
-      - key: STRIPE_SECRET_KEY
-        sync: false
-      - key: YOUR_DOMAIN
-        sync: false
-    autoDeploy: true
-    healthCheckPath: /
+      - key: FLASK_ENV
+        value: production
+      - key: SECRET_KEY
+        value: changeme12345
